##################################################
 Revision history for Log::Log4perl
##################################################

1.13 (not yet released)
    *   (ms) Another doc fix by Craig
    *   (ms) Applied Fedora 7 patches

1.12 (2007/06/23)
    *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
             Log4perl statements in all subsequently loaded modules (allows
             for deploying L4p-enabled CPAN modules without requiring L4p).
    *   (ms) Added ALWAYS easy mode macro (level=OFF)
    *   (ms) Fixed logconfess() frame level bug reported by Ali Mesdaq.
             Added test case.

1.11 (2007/05/29)
    *   (ms) Added PatternLayout::Multiline code by Cory Bennett to 
             render multiline messages.
    *   (ms) Added log level TRACE (lets through even more messages
             than DEBUG) (suggested by Craig).
    *   (ms) Added 'syswrite' flag to file appender to have it use
             'syswrite' instead of 'print', avoiding buffered or
             interleaving messages originating from different processes
             (thanks to Evan Miller).

1.10 (2007/03/27)
    *   (kg) Nikita Dedik pointed out that Saturday is missing from 
             @Log::Log4perl::DateFormat::WEEK_DAYS
    *   (ms) Scott Cline noticed a potential problem with the DBI
             appender reconnection logic in 'buffered' mode. Applied
             a patch.
    *   (ms) Changed DBI reconnect logic to perform even if the DB
             is pingable again.
    *   (ms) Applied code by Valerio Valdez Paolini with modifications
             to PropertyConfigurator.pm to allow pulling values from
             the property configurator by path.

1.09 (2007/02/07)
    *   (ms) Added $^S check to FAQ, as suggested by J. David Blackstone.
    *   (ms) Applied Robert Jacobson's patch for the "DDD" formatter
             in L4p::DateFormats, which now formats the day-of-year values