@@ -5,6 +5,7 @@
 1.13 (not yet released)
     *   (ms) Another doc fix by Craig
     *   (ms) Applied Fedora 7 patches
+    *   (ms) Added create_at_logtime option to file appender
 
 1.12 (2007/06/23)
     *   (ms) Added Log::Log4perl::Resurrector to resurrect commented-out
